Changes from V8.3 to V8.4
=========================

- Guard condition improvement. [t'] has now subterm property of [t] in [u] even
  if [v] doesn't start by a constructor in [(match v with |C .. => fun t' => u
  end) t].

- New proof engine

Tactics

- New tactics constr_eq, is_evar and has_evar.

Vernacular commands

- In SearchAbout, the [ ] delimiters are now optional.
- When the output file of "Print Universes" ends in ".dot" or ".gv",
  the universe graph is printed in the DOT language, and can be
  processed by Graphviz tools.
- The undocumented and obsolete option "Set/Unset Boxed Definitions" has
  been removed, as well as syntaxes like "Boxed Fixpoint foo".

Module System

- The inlining done during application of functors can now be controlled
  more precisely. In addition to the "!F G" syntax preventing any inlining,
  we can now use a priority level to select parameters to inline :
  "<30>F X" means "only inline in F the parameters whose levels are <= 30".
  The level of a parameter can be fixed by "Parameter Inline(30) foo".
  When levels aren't given, the default value is 100. One can also use
  the flag "Set Inline Level ..." to set a level. TODO: DOC!

Libraries

- Creation of PArith, a subdirectory containing files about the positive type,
  such as BinPos or Pnat.
- Extension of the abstract part of Numbers, which now provide axiomatizations
  and results about many more functions, such as pow, gcd, lcm, sqrt, log2.
  Implementations of these functions in nat N BigN Z BigZ. See in particular
  Npeano for new functions about nat.
- Important revision of NArith and ZArith. In particular some definitions
  or lemmas may have moved. The alternative division (Trunc convention
  instead of Floor) is now named Zquot (noted ÷) and Zrem by analogy
  with Haskell. In Zeven, the behavior of Zdiv2 on negative numbers has been
  changed to be consistent with Zdiv, while the old behavior now corresponds
  to function Zquot2. TODO: say more later.